--- a/editor/yours59_animate_span_exchange_editor.css
+++ b/editor/yours59_animate_span_exchange_editor.css
@@ -88,7 +88,7 @@ body.block-editor-page .yours59-animate-text-change-in-marks {
     border-bottom: 1px solid #e0e0e0;
 }
 .word-item.tableheader-free {
-    grid-template-columns: 40% auto;
+    grid-template-columns: 40% 80px 20px;
     padding: 0 !important;
 }
 .word-item.tableheader {
